[project]
name = "dedalus-dice-roller"
version = "0.1.2a1"
description = "Dice roller for Dedalus"
readme = "README.md"
authors = [
    { name = "Matthew Collins" }
]
requires-python = ">=3.10"
dependencies = [
    "dedalus-labs==0.1.0a9",
    "fastmcp>=2.12.4",
    "laissez>=0.0.1a1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
py-modules = ["main"]

[project.scripts]
main = "main:main"
